--- a/challenge2/analysis/justglowing/EnergyViz.html
+++ b/challenge2/analysis/justglowing/EnergyViz.html
@@ -4607,7 +4607,7 @@ kUTc8AoEAoFAIBAIBAKBoEgibngFAoFAIBAIBAKBQFAk+X9TEMqUqN4nbwAAAABJRU5ErkJggg==
 <p>Here, each box describes the distribution fo the data in 30 minutes. It is easy to notice that the average consumption is higher between 10:00 and 13:00. The large amount of outliers between 15:30 and 23:00 suggests that the consumption in the afteernoon and the evening is irregular. Also, there is an increase of the consumption during the evening hours (20:00-1:00).</p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Giuseppe Vettigli, http://www.linkedin.com/in/giuseppevettigli</p>
+<p>Giuseppe Vettigli, <a href="http://www.linkedin.com/in/giuseppevettigli">http://www.linkedin.com/in/giuseppevettigli</a></p>
 </div>
 </body>
 </html>
