--- a/challenge2/analysis/AkiOhtani/sunburst.html
+++ b/challenge2/analysis/AkiOhtani/sunburst.html
@@ -32,7 +32,7 @@ p#intro {
 
 <h1>Energy Consumption Wheel</h1>
 <div id="vis"></div>
-<script src="d3/mbostock-d3-4e4709c/d3.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 var width = 840,
     height = width,
