revise energy.json and add clusters.py

--- a/challenge2/analysis/AkiOhtani/sunburst.html
+++ b/challenge2/analysis/AkiOhtani/sunburst.html
@@ -70,7 +70,7 @@ var arc = d3.svg.arc()
     .innerRadius(function(d) { return Math.max(0, d.y ? y(d.y) : d.y); })
     .outerRadius(function(d) { return Math.max(0, y(d.y + d.dy)); });
 
-d3.json("energy.json"/*"d3/mbostock-d3-4e4709c/raw/wheel.json"*/, function(error, json) {
+d3.json("energy.json" , function(error, json) {
   var nodes = partition.nodes({children: json});
 
   var path = vis.selectAll("path").data(nodes);
