--- a/challenge2/analysis/AkiOhtani/energy_consumption_vis.html
+++ b/challenge2/analysis/AkiOhtani/energy_consumption_vis.html
@@ -6768,7 +6768,7 @@ In&nbsp;[26]:
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h2>
+<h2 id="References">References<a class="anchor-link" href="#References">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -6780,7 +6780,7 @@ In&nbsp;[26]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <ol>
     <li><a href="https://github.com/camenergydatalab/EnergyDataSimulationChallenge/tree/master/challenge2/analysis/kmnmy">https://github.com/camenergydatalab/EnergyDataSimulationChallenge/tree/master/challenge2/analysis/kmnmy</a><a href="https://github.com/camenergydatalab/EnergyDataSimulationChallenge/tree/master/challenge2/analysis/kmnmy" /></li>
-    <li>http://www.jasondavies.com/coffee-wheel/<a href="http://www.jasondavies.com/coffee-wheel/" /></li>
+    <li>coffee-wheel<a href="http://www.jasondavies.com/coffee-wheel/" /></li>
     <li>Programming Collective Intelligence<a href="http://www.oreilly.co.jp/books/9784873113647/" /></li>
 </ol>
 </div>
