--- a/challenge1/analysis/shino/Challenge1.html
+++ b/challenge1/analysis/shino/Challenge1.html
@@ -14899,6 +14899,78 @@ intercept =  [127.69148663]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
+<div class="prompt input_prompt">In&nbsp;[54]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">solution</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">({</span><span class="s1">&#39;House&#39;</span><span class="p">:</span> <span class="n">test_df</span><span class="p">[</span><span class="s1">&#39;House&#39;</span><span class="p">],</span> <span class="s1">&#39;EnergyProduction&#39;</span><span class="p">:</span> <span class="n">predicted</span><span class="p">})</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[55]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">solution</span><span class="o">.</span><span class="n">info</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt output_prompt">Out[55]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>&lt;bound method DataFrame.info of      House  EnergyProduction
+0        1               794
+1        2               605
+2        3               714
+3        4               549
+4        5               549
+..     ...               ...
+495    496               486
+496    497               714
+497    498               645
+498    499               714
+499    500               605
+
+[500 rows x 2 columns]&gt;</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[56]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">solution</span><span class="o">.</span><span class="n">to_csv</span><span class="p">(</span><span class="s2">&quot;predicted_energy_production.csv&quot;</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
